# MediaSpy

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  MediaSpy.pro  MediaSpy.qrc  README.md  README.txt  TODO.txt
doc/: Doxygen
resources/: MediaSpy.qrc
resources/templates/: default.css
resources/ts/: mediaspy_fr.qm  mediaspy_fr.ts  mediaspy_ta.ts
src/: CMakeLists.txt  collection.cpp  collection.h  collectiondialog.cpp  collectiondialog.h  controller.cpp  controller.h  databasemanager.cpp  databasemanager.h  editmediadialog.cpp  editmediadialog.h  imdbthread.cpp  imdbthread.h  infoimdb.cpp  infoimdb.h  infomanager.cpp  infomanager.h  infosupplier.cpp  infosupplier.h  infoview.cpp  infoview.h  main.cpp  media.cpp  media.h  mediacollection.cpp  mediacollection.h  mediafilter.cpp  mediafilter.h  mediaspy.cpp  mediaspy.h  moviemedia.cpp  moviemedia.h  myqlineedit.cpp  myqlineedit.h  myqsqltablemodel.cpp  myqsqltablemodel.h  options.cpp  options.h  optionsdialog.cpp  optionsdialog.h  (+2 more)
src/info/: imdbthread.cpp  imdbthread.h  infoimdb.cpp  infoimdb.h  infomanager.cpp  infomanager.h  infosupplier.cpp  infosupplier.h  infoview.cpp  infoview.h
src/media/: media.cpp  media.h  mediacollection.cpp  mediacollection.h  moviemedia.cpp
src/qtElements/: myqlineedit.cpp  myqlineedit.h  myqlistview.cpp  myqlistview.h  myqsortfilterproxymodel.cpp  myqsortfilterproxymodel.h  myqsqltablemodel.cpp  myqsqltablemodel.h  myqwebview.cpp  myqwebview.h  mysortfilterproxymodel.cpp  mysortfilterproxymodel.h  networkchecker.cpp  networkchecker.h
src/resources/: MediaSpy.qrc
src/resources/templates/: default.css
src/ui/: collectiondialog.ui  editmediadialog.cpp  editmediadialog.ui  mediaspy.ui  optionsdialog.ui
translations/: mediaspy_en.ts  mediaspy_fr.ts  mediaspy_ta.ts
ts/: mediaspy_fr.ts
ui/: collectiondialog.ui  mediaspy.ui
